Fixed minor layout issues in the product editor Added compatibility fixed to the ocupload script for IE [#282] Fixed image delete behavior in IE (because IE is stupid) Fixed edit/delete URL issues in the category list manager Fixed script errors in the promotions editor to appease the IE script interpreter which bulks at some extra commas
git-svn-id: file:///Users/jond/svngit/svnrepos/shopp/trunk@1283 846ab242-8549-0410-9a75-dfdbdae9473e

--- a/core/ui/styles/admin.css
+++ b/core/ui/styles/admin.css
@@ -73,6 +73,7 @@ div.comment-item:hover .row-actions { visibility:visible; }
 #product #prices-loading { width:100%;height:120px;background-position:center center; }
 #product #scheduling,
 #product #schedule-toggling { display:none; }
+#schedule-toggling,#schedule-calendar { text-indent: 0; }
 #scheduling input { text-align: center; }
 
 /* Image details modal */
